--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+
+
+<!-- works -->
+
+<!-- awal's commonjs requirejs -->
+<!-- <script src="node_modules/mini-requirejs/index.js"></script>
+<script>
+	require('src/index.js');
+</script> -->
+
+<!-- browserify bundle -->
+<!-- browserify src/index.js -o dest/bundleBrowserify.js -->
+<!-- <script src="dest/bundleBrowserify.js"></script> -->
+
+
+
+
+<!-- doesnt work -->
+
+<!-- awals bundle -->
+<!-- node build -->
 <script src="dest/bundle.js"></script>
+<!-- Uncaught TypeError: Cannot read property 'call' of undefined bundle.js:24 -->
